Adding sonar fixes